# Spectra

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .graphifyignore  .live-agents  AGENTS.md  BUILD_ENVIRONMENT.md  CLAUDE.md  CMakeLists.txt  CODEBASE_MAP.md  FORMAT.md  LICENSE  LT2_PLUGIN_API_BREATHING_PLAN.md  MENUBAR_ENHANCEMENT.md  Makefile  Makefile.format  README.md  SPECTRA_ROS_BREATHING_PLAN.md  agents_plan.md  compile_commands.json  debug_resize_analysis.md  format_project.sh  imgui.ini  pyproject.toml  resize_debug_summary.md  test_button_debug.cpp  test_gpu_info  test_gpu_info.cpp  test_resize_simple.sh  test_ui_improvements.cpp  upgrade_plan.md
examples/: ADVANCED_FEATURES.md  ANIMATION_SYSTEM.md  CMakeLists.txt  README_3D.md  advanced_animation_demo.cpp  animated_scatter.cpp  axes3d_demo.cpp  axes_menu_demo.cpp  basic_line.cpp  camera_animation_3d.cpp  camera_animator_demo.cpp  comprehensive_subplot_demo.cpp  demo_3d.cpp  easy_api_demo.cpp  easy_embed_demo.cpp  easy_realtime_demo.cpp  eigen_demo.cpp  embed_cpp_demo.cpp  empty_launch_csv.cpp  interactive_ref_demo.cpp  knob_demo.cpp  legend_panel_test.cpp  lit_surface_demo.cpp  live_stream.cpp  logger_example.cpp  mind_blowing_3d.cpp  mode_transition_demo.cpp  multi_figure_demo.cpp  multi_subplot.cpp  multi_window_demo.cpp  multi_window_tabs_demo.cpp  multiproc_demo.sh  offscreen_export.cpp  parametric_3d_line.cpp  plot_styles_demo.cpp  plugin_api_demo.cpp  qt_embed_demo.cpp  realtime_3d_stream.cpp  ros2_demo.cpp  ros2_ui_preview.cpp  (+17 more)
examples/plugins/: CMakeLists.txt  export_csv.cpp  export_csv.plugin.json  overlay_crosshair.cpp  overlay_crosshair.plugin.json  series_heatmap.cpp  series_heatmap.plugin.json  transform_smooth.cpp  transform_smooth.plugin.json
examples/plugins/shaders/: heatmap.frag  heatmap.vert
examples/ros2_launch/: bag_replay.launch.py  bringup.launch.py  imu_monitor.launch.py  nav2_debug.launch.py  nav_dashboard.launch.py  tuning.launch.py
mcp_server/: README.md  pyproject.toml
mcp_server/spectra_mcp/: __init__.py  client.py  server.py
mcp_server/spectra_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/: pyproject.toml
python/examples/: basic_line.py  easy_3d.py  easy_embed_demo.py  easy_embed_pyqt.py  easy_live_dashboard.py  easy_minimal.py  easy_multi_live.py  easy_multi_tab.py  easy_one_liner.py  easy_showcase.py  easy_subplots.py  pyqt_embed.py  qt_backend_demo.py  qt_dynamic_demo.py  qt_minimal.py  streaming_update.py  topic_publisher.py  topic_subscriber.py
python/spectra/: __init__.py  _animation.py  _axes.py  _blob.py  _cli.py  _codec.py  _codec_fb.py  _download.py  _easy.py  _embed.py  _errors.py  _figure.py  _launcher.py  _log.py  _persistence.py  _protocol.py  _series.py  _session.py  _transport.py  embed.py  topic.py
python/spectra/backends/: __init__.py  _qt_compat.py  backend_qtagg.py
python/spectra_plot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/tests/: test_codec.py  test_cross_codec.py  test_download.py  test_easy.py  test_easy_embed.py  test_embed.py  test_packaging_metadata.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_qt_backend.py  test_topic_publisher.py  test_windows_compat.py
src/adapters/ros2/: CMakeLists.txt  axis_mode.hpp  bag_display_sync.cpp  bag_display_sync.hpp  bag_field_spec.cpp  bag_field_spec.hpp  bag_message_compat.hpp  bag_player.cpp  bag_player.hpp  bag_reader.cpp  bag_reader.hpp  bag_recorder.cpp  bag_recorder.hpp  expression_engine.cpp  expression_engine.hpp  expression_plot.cpp  expression_plot.hpp  generic_subscriber.cpp  generic_subscriber.hpp  generic_subscription_compat.hpp  main.cpp  message_introspector.cpp  message_introspector.hpp  plot_series_pruning.hpp  ros2_adapter.cpp  ros2_adapter.hpp  ros2_bridge.cpp  ros2_bridge.hpp  ros_app_shell.cpp  ros_app_shell.hpp  ros_app_shell_bag_clock.cpp  ros_app_shell_drop_targets.cpp  ros_app_shell_drop_targets.hpp  ros_app_shell_menus.cpp  ros_app_shell_panel_wiring.cpp  ros_clipboard_export.cpp  ros_clipboard_export.hpp  ros_csv_export.cpp  ros_csv_export.hpp  ros_log_viewer.cpp  (+16 more)
tests/: CMakeLists.txt  dawn_surface_test.cpp
tests/bench/: bench_3d.cpp  bench_3d_phase3.cpp  bench_decimation.cpp  bench_ipc_codec.cpp  bench_multi_window.cpp  bench_phase2.cpp  bench_phase3.cpp  bench_render.cpp  bench_ros3d.cpp  bench_startup.cpp  bench_ui.cpp
tests/data/ros_bags/: README.md
tests/golden/: golden_test.cpp  golden_test_3d.cpp  golden_test_3d_phase3.cpp  golden_test_phase2.cpp  golden_test_phase3.cpp  image_diff.hpp
tests/golden/baseline/: 3d_bounding_box.raw  3d_camera_front.raw  3d_camera_ortho.raw  3d_camera_top.raw  3d_combined_line_scatter.raw  3d_depth_occlusion.raw  3d_grid_all.raw  3d_grid_xy.raw  3d_line_basic.raw  3d_line_helix.raw  3d_mesh_quad.raw  3d_mesh_triangle.raw  3d_mixed_2d_3d.raw  3d_multi_subplot.raw  3d_p3_lighting_disabled.raw  (+37 more)
tests/qa/: qa_agent.cpp  ros_qa_agent.cpp
tests/unit/: mock_integration_plugin.cpp  mock_overlay_plugin.cpp  mock_plugin_v1_0.cpp  mock_plugin_v1_1.cpp  mock_plugin_v1_99.cpp  mock_transform_plugin.cpp  test_3d_integration.cpp  test_3d_pipelines.cpp  test_3d_regression.cpp  test_accessibility.cpp  test_accessible_summary.cpp  test_animation_controller.cpp  test_animation_tick_gate.cpp  test_automation_dispatch.cpp  test_axes3d.cpp  test_axes_view_model.cpp  test_axis_link.cpp  test_bag_info_panel.cpp  test_bag_player.cpp  test_bag_reader.cpp  test_bag_recorder.cpp  test_box_zoom_overlay.cpp  test_camera.cpp  test_camera_animator.cpp  test_chunked_array.cpp  test_chunked_series.cpp  test_clipboard_export.cpp  test_clipboard_image.cpp  test_command_palette_registry.cpp  test_command_queue.cpp  test_command_registry.cpp  test_cross_codec.cpp  test_csv_loader.cpp  test_data_editor.cpp  test_data_interaction.cpp  test_data_transform.cpp  test_decimation.cpp  test_depth_buffer.cpp  test_diagnostics_panel.cpp  test_discovery_introspection.cpp  (+143 more)
tests/util/: gpu_hang_detector.hpp  multi_window_fixture.hpp  validation_guard.hpp
(+1049 files in other folders)
